<resources>
    <string name="app_name">Nekoma_FamiliesShare</string>
    <string name="login_string">Compila il form per utilizzare l\'app modificata da Nekoma</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="url">http:/192.168.1.10:8080/api</string>
    <string name="chisiamo">Siamo un team di studenti della facoltà di informatica dell\'Università Ca Foscari di Venezia.</string>
    <string name="lapplicazione">Questa applicazione ha lo scopo di estendere l\'esistente Families Share, evolvendolo alla situazione attuale. Offre nuove funzionalità come la creazione di servizi finalizzati al prestito di beni, la creazione di eventi riccorenti e non con etichette e la possibilità di assegnare ai propri figli preferenze legate alle etichette.</string>
    <string name="eventi">Gli eventi possono essere comodamente creati attraverso l\'apposita sezione. Sono riservati al gruppo con cui si decide di condividere l\'evento con la possibilità di categorizzarlo grazie alle etichette.</string>
    <string name="servizi">I servizi possono essere comodamente creati attraverso l\'apposita sezione. Vengono proposti dei template, come per il servizio di car sharing, sono riservati al gruppo con cui si decide di condividere il servizio.</string>
    <string name="bambini">La nuova estensione permette di definire alcune preferenze del tuo bambino in modo da permettere agli utenti appartenenti allo stesso gruppo di conoscere le sue etichette. Ma ciò permette anche di visualizzare eventi filtrati in base alle sue preferenze nell\'apposita sezione.</string>
    <string name="nome">Genitore:</string>
    <!-- Stringhe usate nel layout del profilo -->
    <string name="profilepictureLabel">Foto profilo</string>
    <string name="emailLabel">Email</string>
    <string name="nameLabel">Name</string>
    <string name="surnameLabel">Cognome</string>
    <string name="phonenumberLabel">Numero telefono</string>
    <string name="addressLabel">Indirizzo</string>
    <string name="cityLabel">Città</string>
    <string name="enableEdit">Abilita Modifiche</string>
    <string name="disableEdit">Disabilita Modifiche</string>
    <string name="savechanges">Salva Modifiche</string>
    <string name="deleteProfile">Elimina Profilo</string>
    <string name="urlnoapi">http://10.0.2.2:8080</string>
    <string name="attivitàricorrenti">Eventi</string>
    <string name="servizipersona">Servizi alla persona</string>
    <string name="attivitàconsigliate">Attività consigliate</string>
    <string name="serviziricorrenti">Attività ricorrenti</string>
    <string name="carsharing">Carsharing</string>
    <string name="prestito">Prestito</string>
    <string name="yourJoin">Giorni in cui partecipi:</string>
    <string-array name="eventName">
        <item>Evento semplice</item>
        <item>Carsharing</item>
        <item>Prestito</item>
        <item>Commissionare attività</item>
    </string-array>

    <string-array name="cadenza">
        <item>Giornaliera</item>
        <item>Settimanale</item>
        <item>Mensile</item>
    </string-array>


    <string name="title_activity_creazione_evento1">creazione_evento!</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Stringhe per l'activity del nuovo servizio -->
    <string name="nsToolbar">Nuovo Servizio</string>
    <string name="serviceImageUrl">Url immagine</string>
    <string name="serviceName">Nome Servizio</string>
    <string name="serviceDescription">Descrizione</string>
    <string name="serviceLocation">Luogo servizio</string>
    <string name="servicePattern">Seleziona Pattern</string>
    <string name="serviceCarSpace">Spazio in macchina</string>
    <string name="serviceLendObj">Oggetto da prestare</string>
    <string name="serviceLendTime">Data fine prestito oggetto</string>
    <string name="servicePickupLocation">Inserisci posto ritiro</string>
    <string name="serviceCheck">Ricorrenza</string>
    <string name="serviceType">Servizio che si ripete ogni</string>
    <string name="serviceDaysRec">Seleziona giorni che si ripete il servizio</string>
    <string name="serviceStartDate">Data Inizio Servizio</string>
    <string name="serviceEndDate">Data Fine Servizio</string>
    <string name="serviceSelectDate">Seleziona una data</string>
    <string name="serviceNofMonths">Numero di mesi</string>
    <string name="serviceMonths">Date occorrenze</string>
    <string name="radioMon">Mon</string>
    <string name="radioTue">Tue</string>
    <string name="radioWen">Wen</string>
    <string name="radioThu">Thu</string>
    <string name="radioFri">Fri</string>
    <string name="radioSat">Sat</string>
    <string name="radioSun">Sun</string>
    <string name="serviceSave">Salva</string>
    <string-array name="serviceType">
        <item>Carsharing</item>
        <item>Prestito oggetti</item>
        <item>Servizio alle persone</item>
    </string-array>
</resources>