<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="-31dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_profilo"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/abc_vector_test"
        app:title="Profilo"
        app:titleTextColor="#FFFFFF" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="263dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePicture"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/profilePicture"
        android:layout_width="127dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="264dp"
        android:layout_marginBottom="8dp"
        android:text="@string/profilepictureLabel"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/profileImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_profilo" />

    <TextView
        android:id="@+id/profileEmailLabel"
        android:layout_width="95dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/emailLabel"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <TextView
        android:id="@+id/profileSurnameLabel"
        android:layout_width="94dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/surnameLabel"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileNameLabel" />

    <TextView
        android:id="@+id/profilePhoneLabel"
        android:layout_width="94dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/phonenumberLabel"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileSurnameLabel" />

    <TextView
        android:id="@+id/profileAddressLabel"
        android:layout_width="94dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/addressLabel"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoneLabel" />

    <TextView
        android:id="@+id/profileCityLabel"
        android:layout_width="94dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/cityLabel"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileAddressLabel" />

    <TextView
        android:id="@+id/profileNameLabel"
        android:layout_width="94dp"
        android:layout_height="25dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/nameLabel"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmailLabel" />

    <EditText
        android:id="@+id/profileEmail"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileEmailLabel"
        app:layout_constraintTop_toBottomOf="@+id/profileImage"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/profileName"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileNameLabel"
        app:layout_constraintTop_toBottomOf="@+id/profileEmail"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/profileSurname"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileSurnameLabel"
        app:layout_constraintTop_toBottomOf="@+id/profileName"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/profilePhone"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilePhoneLabel"
        app:layout_constraintTop_toBottomOf="@+id/profileSurname"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/profileCity"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileCityLabel"
        app:layout_constraintTop_toBottomOf="@+id/profileStreet"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/profileStreet"
        android:layout_width="177dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toEndOf="@+id/profileAddressLabel"
        app:layout_constraintTop_toBottomOf="@+id/profilePhone"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />

    <Switch
        android:id="@+id/EditSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="104dp"
        android:minHeight="48dp"
        android:text="@string/enableEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileAddressLabel" />

    <Button
        android:id="@+id/deleteProfile"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="#AE4848"
        android:onClick="DeleteUser"
        android:text="@string/deleteProfile"
        android:textAlignment="textEnd"
        app:icon="?android:attr/alertDialogIcon"
        app:iconPadding="0dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileSaveChanges"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/profileSaveChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="38dp"
        android:backgroundTint="#83CF63"
        android:enabled="false"
        android:onClick="EditUser"
        android:text="@string/savechanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toEndOf="@+id/EditSwitch"
        app:layout_constraintTop_toBottomOf="@+id/profileStreet" />

    <EditText
        android:id="@+id/profileNumber"
        android:layout_width="76dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profileStreet"
        app:layout_constraintTop_toBottomOf="@+id/profilePhone"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>